--- a/bootstrap/track.html
+++ b/bootstrap/track.html
@@ -74,7 +74,7 @@
                     <ul class="nav nav-list">
                         <li class="nav-header">To Do</li>
                         <li>
-                            <a href="#">Create New</a>
+                            <a href="profile.html">Create New</a>
                         </li>
                         <li class="active">
                             <a href="#">Track Packages</a>
