--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -119,7 +119,7 @@
 			<h3>Thank you for registering. Please verify your email</h3>
 			</div>
 			<div id="oopssignup" style="display:none;">
-			<h3>Oops!!! Something went wrong. Please refresh the page and try again.</h3>
+			<h3>Oops! Something went wrong. Please refresh the page and try again.</h3>
 			</div>
         </div>
         <hr>
