--- a/bootstrap/track.html
+++ b/bootstrap/track.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Bootstrap, from Twitter</title>
+    <title>ScanItOn Tracking</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -46,17 +46,21 @@
                     <span class="icon-bar"></span>
 
                 </a>
-                <a class="brand" href="#">Scaniton</a>
+                <a class="brand" href="http://www.scaniton.com" style="padding-top:5px;padding-bottom:0px;"><img src="img/logo.png" width="140px" height="37px"/></a>
                 <div class="nav-collapse collapse">
-                    <p class="navbar-text pull-right">Logged in as
+
+                    <p class="navbar-text pull-right" style="padding-left:10px;"> 
+                        <input id="logout"  class="btn btn-success" type="submit" value="Logout" style="margin-top:0px;"/>
+                    </p>
+                    <p class="navbar-text pull-right" style="padding-left:10px;">Logged in as
                         <a id="user" href="#" class="navbar-link">Username</a>
                     </p>
-                    <ul class="nav">
-                        <li class="active">
-                            <a href="index.html">Home</a>
-                        </li>
+                    <ul class="nav pull-right">
                         <li>
-                            <a href="index.html#About">About</a>
+                            <a href="profile.html">Create</a>
+                        </li>
+                        <li class="active">
+                            <a href="track.html">Track</a>
                         </li>
                         <li>
                             <a href="index.html#Contact">Contact</a>
@@ -145,6 +149,13 @@
 				}else
 				{console.log("no user");}
 			});
+    $(document).ready(function(){
+                $('#logout').click(function() {
+                    Parse.User.logOut();
+                    window.location.href="http://scaniton.com"
+                });
+            });
+    
 	</script>
 	
 	
