--- a/bootstrap/track.html
+++ b/bootstrap/track.html
@@ -10,7 +10,7 @@
     <!-- Le styles -->
     <!-- TODO: make sure bootstrap.min.css points to BootTheme generated file
         -->
-    <link href="bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <style type="text/css">
         body {
             padding-top: 60px;
