--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -114,16 +114,16 @@
                 <!-- Feature Item 1 -->
                 <div class="col-md-4 text-center">
                     <div class="feature-icon">
-                        <img src="img/step1.png" alt="" />
+                        <img src="img/step1.svg" alt="" />
                     </div>
                     <h4>Print and Pack</h4>
-                    <p>Customize and print your QR codes. Slip it in your package. And ship it off.</p>
+                    <p>Customize and print your QR codes. Slip them in your package. And ship them off.</p>
                 </div>
 
                 <!-- Feature Item 2 -->
                 <div class="col-md-4 text-center">
                     <div class="feature-icon">
-                        <img src="img/step2.png" alt="" />
+                        <img src="img/step2.svg" alt="" />
                     </div>
                     <h4>Scan</h4>
                     <p>The recipient opens the package, pulls out the QR code slip, and scans with any code reader smartphone app.</p>
@@ -132,7 +132,7 @@
                 <!-- Feature Item 3 -->
                 <div class="col-md-4 text-center">
                     <div class="feature-icon">
-                        <img src="img/step3.png" alt="" />
+                        <img src="img/step3.svg" alt="" />
                     </div>
                     <h4>Confirm</h4>
                     <p>As soon as their phone scans the code, you’ll be notified.</p>
