navigate to profile page

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -468,6 +468,7 @@ $("#buttonProductionSummary").click(function(e) {
 							$("#signinup").hide();
 							$("#dash").show();
 							$("#dashhead").show();
+							window.location.href="profile.html"
                             var url = document.location.toString();
                 if(url.match('id'))
                     {var qr_code=url.split('=')[1];
