added the app store link

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -93,7 +93,7 @@
 
                 <div class="col-md-6 intro">
                     <p style="padding-top:-30px;" class="lead">Giving the sender a personalized confirmation on receipt</p>
-                    <a href="#register" class="btn btn-hg btn-primary">Sign Up/Log In</a> <img src="img/appstore.svg" height="78px" style="margin-top:25px; padding-left:30px;"/>
+                    <a href="#register" class="btn btn-hg btn-primary">Sign Up/Log In</a> <a href="https://itunes.apple.com/us/app/id760760895?mt=8"><img src="img/appstore.svg" height="78px" style="margin-top:25px; padding-left:30px;"/></a>
                 </div>
 
             </div><!-- /row -->
