--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -290,7 +290,7 @@
                 <div class="col-md-6">
 
                     <div class="row contact-intro">
-                        <div class="col-md-3 text-right"><img src="images/icons/support.svg" alt="" /></div>
+                        <div class="col-md-3 text-right"><img src="img/support.svg" alt="" /></div>
                         <div class="col-md-9"><p class="lead">Didn't find what you were looking for or have some feedback? Shoot us a message!</p></div>                        
                     </div>
 
