--- a/bootstrap/profile3.html
+++ b/bootstrap/profile3.html
@@ -34,7 +34,7 @@
               <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a href="#">Create</a></li>
                   <li><a href="track.html">Track</a></li>
-                  <li><a href="index.html#Contact">Contact</a></li>
+                  <li><a href="index.html#faq">Contact</a></li>
               </ul>
 		  </div><!-- /.navbar-collapse -->
 		</nav>
@@ -73,13 +73,13 @@
 													 <label for="formmessage">Message</label>
 													 <textarea type="text" class="form-control" id="formmessage" placeholder="Insert optional message here (e.g. instructions...)"></textarea>
 												</div>
-												<div class="form-group">
+												<!--<div class="form-group">
 													<label for="companylogo">Company Logo</label>
 													<input type="file" id="comanylogo">
 													<p class="help-block">
 														Optional: Upload your company logo to display on the print-out
 													</p>
-												</div>
+												</div>-->
 											</form>
 										</div>
 									</div>
@@ -134,7 +134,10 @@
 			var QrCode = Parse.Object.extend("qr_url");
 			var qrcode = new QrCode();
 			var currentUser = Parse.User.current();
-			qrcode.set("createdBy", currentUser);						 
+			qrcode.set("createdBy", currentUser);
+			qrcode.set("title", $('#pagetitle').val());
+			qrcode.set("message", $('#formmessage').val());
+			$('#qrholder').empty();
 			qrcode.save(null, {
 			  success: function(qrcode) {
 				// Execute any logic that should take place after the object is saved.
