--- a/bootstrap/tracktable.html
+++ b/bootstrap/tracktable.html
@@ -62,10 +62,10 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="index.html#About">About</a>
+                            <a href="index.html#features">About</a>
                         </li>
                         <li>
-                            <a href="index.html#Contact">Contact</a>
+                            <a href="index.html#faq">Contact</a>
                         </li>
                     </ul>
                 </div>
