--- a/bootstrap/scan.html
+++ b/bootstrap/scan.html
@@ -442,7 +442,7 @@ $("#buttonProductionSummary").click(function(e) {
                     var qrpointer = new Qrpointer();
                     qrpointer.id=qr_code;
                     logger.set("createdBy", currentUser);
-                    logger.createWithoutData("qrid", qrpointer);                   
+                    logger.save("qrid", qrpointer);                   
                     logger.save(null, {
                       success: function(logger) {
                         // Execute any logic that should take place after the object is saved.
