--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				<div class="feature-icon">
 					<img src="assets/img/step1.svg" width="180" alt="">
 				</div>
-				<h3>Pring & Pack</h3>
+				<h3>Print & Pack</h3>
 				<p>Customize and print your QR codes. Slip them in your package. And ship them off.</p>
 			</div>
 			<div class="col-lg-4">
