--- a/create_single.html
+++ b/create_single.html
@@ -147,7 +147,7 @@
             success: function(qrcode) {
               // Execute any logic that should take place after the object is saved.
               //alert('New object created with objectId: ' + qrcode.id);
-              $('#qrholder').qrcode("http://markkirzon.altervista.org/scan.html?id=" + qrcode.id);
+              $('#qrholder').qrcode("http://www.scaniton.com/scan.html?id=" + qrcode.id);
               var doc = new jsPDF();
               var pagetitle=document.getElementById('packageTitle').value;
               var pagemessage=document.getElementById('formmessage').value;
